# model

./: .gitignore  LICENSE  README.md  generate.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
schemas/: definitions.json  index.json  lawyer.json  query.json
